--- a/style.css
+++ b/style.css
@@ -1,64 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-:root{
-    --green:#6a994e  ;
+:root {
+    --green: #6a994e;
 
 }
 
-body{
+body {
     font-family: "Poppins", sans-serif;
     line-height: 1.2rem;
-}
-.flex{
-    display: flex;
-   
-
-}
-
-.assignment{
-    height: 100vh;
     overflow: hidden;
-    
 }
-.left-side{
+
+.flex {
+    display: flex;
+
+
+}
+
+.assignment {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+
+}
+
+.left-side {
     height: 100vh;
     width: 50vw;
 }
+
 .right-side {
-  background-image: url("home3.png");
-  background-size: cover;
-  width: 45vw;
-  height: 100vh;
-  margin: 16px;
-  border-radius: 10px;
-  animation:  fadein 2s;
+    background-image: url("home3.png");
+    background-size: cover;
+    width: 50vw;
+    height: 96vh;
+    margin: 12px;
+    border-radius: 16px;
+    animation: fadein 2s;
 }
-.nav{
+
+.nav {
     justify-content: space-between;
     padding: 20px 10px;
 }
 
 .nav-logo {
-    animation: faderight 0.5s ;
+    animation: faderight 0.5s;
 }
 
-
-.signin{
-    align-items:center;
+.signin {
+    align-items: center;
     gap: 10px;
-    
+
 }
-.nav-signin1{
+
+.nav-signin1 {
     color: gray;
     animation: fadeleft 0.5s;
 }
 
-.nav-signin2 button{
+.nav-signin2 button {
     padding: 8px 12px;
     border-radius: 40px;
     background-color: white;
@@ -66,90 +73,112 @@ body{
     color: var(--green);
 }
 
-.nav-signin2 button:hover{
+.nav-signin2 button:hover {
     background-color: var(--green);
     color: whitesmoke;
 
+
 }
-.form{
+
+.form {
     flex-direction: column;
-    gap:20px;
-    margin:45px 100px;
-  justify-content: center;
-  
-    text-align: center;   
-    animation: fadeup 1.3s ;
-    
+    gap: 16px;
+    margin: 45px 100px;
+    justify-content: center;
+
+    text-align: center;
+    animation: fadeup 1.3s;
+
+
+}
+
+.form h1 {
+    text-align: center;
+    font-size: 2.7rem;
     
 }
-.form h1{
-    line-height: 1.9rem;
-    font-size: 2.6rem;
-}
-.forgot{
+
+.forgot {
     justify-content: center;
     gap: 10px;
     color: var(--green);
 }
-.forgot a{
+
+.forgot a {
     text-decoration: none;
     color: var(--green);
 }
-.forgot a:hover{
+
+.forgot a:hover {
     color: rgb(3, 49, 3);
     transform: scale(1.01);
 
 }
 
 
-.online-id{
+.online-id {
     height: 60px;
-    width: 31vw;
-    margin: 10px 0 0 60px;
+    width: 95%;
+    margin: 10px 0 0 0; 
     padding: 10px;
+
     border-radius: 15px;
     font-size: 1.1rem;
     border: 1px solid var(--green);
-    box-shadow: 0 0 8px var(--green);  
+    box-shadow: 0 0 8px var(--green);
 }
 
-.online-id:focus,.password:focus{
+.online-id:focus,
+.password:focus {
     outline: var(--green);
     border: 2px solid var(--green);
 }
-.password{
+
+.password {
     height: 60px;
-    width: 34vw;
-    margin: 0 0 0 60px;
+    width: 95%;
+    margin: 10px 0 0 0; 
+
     padding: 10px;
     border-radius: 15px;
     font-size: 1.1rem;
     border: 1px solid var(--green);
     box-shadow: 0 0 8px var(--green);
 }
-#show-password{
+
+/* #show-password {
     margin: 22px 0 0 12px;
     color: gray;
-}
-#alert{
+} */
+
+#alert {
     color: gray;
     align-self: self-start;
-    margin-left: 64px;
+    margin-left: 2%;
     font-size: 0.9rem;
 }
-.remember-me{
-    margin: 0px 64px;
-}
-.remember-me input{
-    width: 24px;
-    margin-right: 3px;
-    background-color: white;
-    accent-color: var(--green);
-    
+
+.remember-me {
+   align-self: self-start;
+   justify-self: center;
+   margin-left: 1%;
+
 }
 
- .login1{  /* unclicked button */
-    width: 30vw;
+.checkbox {
+    width: 28px;
+    align-self: self-start;
+    justify-self: center;
+    
+    margin: 3px;
+    background-color: white;
+    accent-color: var(--green);
+
+}
+
+.login1 {
+    /* unclicked button */
+    width: 90%;
     align-self: center;
     padding: 12px;
 
@@ -159,8 +188,10 @@ body{
     border: none;
     color: white;
 }
-.login2{  /* clicked button */
-    width: 30vw;
+
+.login2 {
+    /* clicked button */
+    width: 90%;
     align-self: center;
     padding: 12px;
 
@@ -171,25 +202,25 @@ body{
 }
 
 
-.login2:hover{
+.login2:hover {
     transform: scale(1.03);
 }
-.copyright{
+
+.copyright {
     text-align: center;
-    margin-top: 80px;
-    font-size: 0.6rem;
+    margin-top: 16vh;
+    font-size: 0.8rem;
     color: rgb(95, 93, 93);
     opacity: 1;
-    animation: fadeup 0.7s ;
+    animation: fadeup 0.7s;
 }
 
-.fa-spinner
-{
-       animation: spin 2s linear infinite;
-       margin-left: 5px;
+.fa-spinner {
+    animation: spin 2s linear infinite;
+    margin-left: 5px;
 }
 
-.hidden{
+.hidden {
     visibility: hidden;
 
 }
@@ -200,55 +231,65 @@ body{
 
 @keyframes spin {
 
-    0%{ transform: rotate(0deg);}
-    100%{ transform: rotate(360deg);}
-    
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+
 }
 
-@keyframes fadeup{
-    from{
+@keyframes fadeup {
+    from {
         opacity: 0;
         transform: translateY(50px) scale(0.9);
     }
-    to{
+
+    to {
         opacity: 1;
         transform: translateY(0px) scale(1);
     }
-    
+
 }
 
-@keyframes faderight{
-    from{
+@keyframes faderight {
+    from {
         opacity: 0;
         transform: translateX(-30px) scale(0.9);
     }
-    to{
+
+    to {
         opacity: 1;
         transform: translateX(0px) scale(1);
     }
-    
+
 }
 
-@keyframes fadeleft{
-    from{
+@keyframes fadeleft {
+    from {
         opacity: 0;
         transform: translateX(30px) scale(0.9);
     }
-    to{
+
+    to {
         opacity: 1;
         transform: translateX(0px) scale(1);
     }
-    
-}
-@keyframes fadein{
 
-    from{
+}
+
+@keyframes fadein {
+
+    from {
         opacity: 0;
-        transform:  scale(0.2);
+        transform: scale(0.2);
     }
-    to{
+
+    to {
         opacity: 1;
         transform: scale(1);
     }
-    
+
 }
